--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,11 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
+}
+
+body {
+  overflow-x: hidden;
 }
 h1,
 h2,
